--- a/MetalImageRecognition/Base.lproj/Main.storyboard
+++ b/MetalImageRecognition/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2F6-AV-tDW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ef1-PB-cXf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,23 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer id="5P2-7m-xb9">
-                    <connections>
-                        <action selector="tap:" destination="BYZ-38-t0r" id="ubg-On-XE7"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <swipeGestureRecognizer direction="right" id="2Gl-it-oke" userLabel="SwipeRight">
-                    <connections>
-                        <action selector="swipeRightWithSender:" destination="BYZ-38-t0r" id="uGk-EE-UAX"/>
-                    </connections>
-                </swipeGestureRecognizer>
-                <swipeGestureRecognizer direction="left" id="sOE-Dg-BEr" userLabel="SwipeLeft">
-                    <connections>
-                        <action selector="swipeLeftWithSender:" destination="BYZ-38-t0r" id="bZP-bW-4hB"/>
-                    </connections>
-                </swipeGestureRecognizer>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Image_Recognition" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CameraViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="Image_Recognition" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -56,7 +40,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ge7-Kq-imR">
-                                <rect key="frame" x="269" y="20" width="90" height="41"/>
+                                <rect key="frame" x="269" y="64" width="90" height="41"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="Camera">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -66,13 +50,23 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DJG-Py-jYs">
-                                <rect key="frame" x="94" y="19" width="153" height="41"/>
+                                <rect key="frame" x="94" y="63" width="153" height="41"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="Run Network">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="tap:" destination="dkx-z0-nzr" eventType="touchUpInside" id="feD-Jc-IKx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6ih-Uw-KR0">
+                                <rect key="frame" x="14" y="64" width="57" height="41"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="backAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="blC-3D-zDP"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -83,6 +77,7 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Ge7-Kq-imR" secondAttribute="trailing" id="LPW-gy-REd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Ysb-j9-4in" secondAttribute="trailing" constant="-15" id="MUF-NU-m41"/>
                             <constraint firstItem="Ysb-j9-4in" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="113" id="Orp-GP-BHA"/>
+                            <constraint firstItem="6ih-Uw-KR0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="14" id="TVF-dM-bCh"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ysb-j9-4in" secondAttribute="bottom" constant="20" id="USj-ta-bg8"/>
                             <constraint firstItem="o1r-Jk-Tig" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="129" id="VZN-HT-7Ee"/>
                             <constraint firstItem="Ge7-Kq-imR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="c8i-z2-CZc"/>
@@ -91,6 +86,7 @@
                             <constraint firstItem="Ge7-Kq-imR" firstAttribute="leading" secondItem="DJG-Py-jYs" secondAttribute="trailing" constant="22" id="qw1-PF-vPv"/>
                             <constraint firstItem="DJG-Py-jYs" firstAttribute="leading" secondItem="o1r-Jk-Tig" secondAttribute="trailing" constant="8" id="rHC-SV-Csy"/>
                             <constraint firstItem="o1r-Jk-Tig" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sXl-0E-6oT"/>
+                            <constraint firstItem="6ih-Uw-KR0" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="vHf-Mw-ZU5"/>
                             <constraint firstItem="o1r-Jk-Tig" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wkg-1j-JMm"/>
                         </constraints>
                         <variation key="default">
@@ -108,10 +104,26 @@
                         <outlet property="predictView" destination="o1r-Jk-Tig" id="KjC-Qx-q1I"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="5P2-7m-xb9">
+                    <connections>
+                        <action selector="tap:" destination="BYZ-38-t0r" id="ubg-On-XE7"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <swipeGestureRecognizer direction="right" id="2Gl-it-oke" userLabel="SwipeRight">
+                    <connections>
+                        <action selector="swipeRightWithSender:" destination="BYZ-38-t0r" id="uGk-EE-UAX"/>
+                    </connections>
+                </swipeGestureRecognizer>
+                <swipeGestureRecognizer direction="left" id="sOE-Dg-BEr" userLabel="SwipeLeft">
+                    <connections>
+                        <action selector="swipeLeftWithSender:" destination="BYZ-38-t0r" id="bZP-bW-4hB"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-4.6875" y="-3.5156249999999996"/>
+            <point key="canvasLocation" x="-5.5999999999999996" y="-4.0479760119940034"/>
         </scene>
-        <!--Draw View Controller-->
+        <!--Digit Recognition-->
         <scene sceneID="Vgr-lO-dXV">
             <objects>
                 <viewController id="2F6-AV-tDW" customClass="DrawViewController" customModule="Image_Recognition" customModuleProvider="target" sceneMemberID="viewController">
@@ -123,29 +135,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nq3-qs-fYm" customClass="DrawView" customModule="Image_Recognition" customModuleProvider="target">
-                                <rect key="frame" x="67" y="202" width="240" height="179"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nq3-qs-fYm" customClass="DrawView" customModule="Image_Recognition" customModuleProvider="target">
+                                <rect key="frame" x="67.5" y="254" width="240" height="179"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Gon-Rs-0rB"/>
+                                    <constraint firstAttribute="height" constant="179" id="Pum-lo-1AY"/>
+                                </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hYW-OU-uLn">
-                                <rect key="frame" x="151" y="164" width="72" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hYW-OU-uLn">
+                                <rect key="frame" x="151.5" y="216" width="72" height="30"/>
                                 <state key="normal" title="Recognize"/>
                                 <connections>
                                     <action selector="detectBtnTappedWithSender:" destination="2F6-AV-tDW" eventType="touchUpInside" id="g3F-Ig-ft0"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQT-ly-IoP">
-                                <rect key="frame" x="164" y="408" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQT-ly-IoP">
+                                <rect key="frame" x="166.5" y="453" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o70-3o-Gtp">
-                                <rect key="frame" x="148" y="446" width="78" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o70-3o-Gtp">
+                                <rect key="frame" x="148.5" y="489" width="78" height="30"/>
                                 <state key="normal" title="Clear Label"/>
                                 <connections>
                                     <action selector="clearBtnTappedWithSender:" destination="2F6-AV-tDW" eventType="touchUpInside" id="j9f-af-pLn"/>
@@ -153,7 +165,24 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bQT-ly-IoP" firstAttribute="top" secondItem="nq3-qs-fYm" secondAttribute="bottom" constant="20" id="Ix6-kO-mOA"/>
+                            <constraint firstItem="o70-3o-Gtp" firstAttribute="centerX" secondItem="oJu-Pa-UMx" secondAttribute="centerX" id="Un5-et-8H1"/>
+                            <constraint firstItem="hYW-OU-uLn" firstAttribute="centerX" secondItem="oJu-Pa-UMx" secondAttribute="centerX" id="Xx2-Fz-ZgW"/>
+                            <constraint firstItem="nq3-qs-fYm" firstAttribute="top" secondItem="hYW-OU-uLn" secondAttribute="bottom" constant="8" id="Yne-ve-6YG"/>
+                            <constraint firstItem="nq3-qs-fYm" firstAttribute="centerY" secondItem="oJu-Pa-UMx" secondAttribute="centerY" constant="10" id="bEi-1v-zt4"/>
+                            <constraint firstItem="bQT-ly-IoP" firstAttribute="centerX" secondItem="oJu-Pa-UMx" secondAttribute="centerX" id="cz4-1K-oIQ"/>
+                            <constraint firstItem="nq3-qs-fYm" firstAttribute="centerX" secondItem="oJu-Pa-UMx" secondAttribute="centerX" id="qiV-BJ-giy"/>
+                            <constraint firstItem="o70-3o-Gtp" firstAttribute="top" secondItem="bQT-ly-IoP" secondAttribute="bottom" constant="15" id="r4t-Dq-tiV"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Digit Recognition" id="X03-jp-bkG">
+                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="xuw-Kh-CAG">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="Heg-U3-SAJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="clearBtn" destination="o70-3o-Gtp" id="gmg-uj-xdH"/>
                         <outlet property="digitView" destination="nq3-qs-fYm" id="GUa-FF-Rti"/>
@@ -162,7 +191,23 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r0X-mP-MWk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="29.600000000000001" y="812.74362818590714"/>
+            <point key="canvasLocation" x="-750" y="-4"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zer-oi-h3K">
+            <objects>
+                <navigationController id="Ef1-PB-cXf" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Fic-CB-hPA">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="2F6-AV-tDW" kind="relationship" relationship="rootViewController" id="7BS-iC-Aje"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uOs-6l-GNR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1553" y="-4"/>
         </scene>
     </scenes>
 </document>
